--- a/src/app/create-task-modal/create-task-modal.component.css
+++ b/src/app/create-task-modal/create-task-modal.component.css
@@ -6,12 +6,12 @@
     left: 50%;
     transform: translate(-50%, -50%);
     top: 50%;
-    background: var(--color-sec-bg);
+    background: var(--sec-background);
     padding: 2rem;
     border-radius: 6px;
     max-height: 90%;
     overflow: auto;
-    color: var(--color-text);
+    color: var(--text);
 }
 
 form {
@@ -24,7 +24,7 @@ form input {
     /* border: 1px solid rgba(130,143,163,.25); */
     border: 2px solid rgba(130, 143, 163, .4);
     background: transparent;
-    color: var(--color-text);
+    color: var(--text);
     outline: none;
     font-family: Plus Jakarta Sans, sans-serif;
     margin: 1rem 0;
@@ -90,7 +90,7 @@ label {
     padding: 0.5rem;
     border: 2px solid rgba(130, 143, 163, .4);
     background: transparent;
-    color: var(--color-text);
+    color: var(--text);
     outline: none;
     font-family: Plus Jakarta Sans, sans-serif;
     margin: 0.5rem 0 1rem;
@@ -111,7 +111,7 @@ label {
     appearance: none;
     border: 2px solid rgba(130, 143, 163, .4);
     background: transparent;
-    color: var(--color-text);
+    color: var(--text);
     outline: none;
     padding: 0.5rem;
     background-image: url('/assets/icons/icon-chevron-down.svg');
@@ -125,7 +125,7 @@ label {
 }
 
 .select_status option {
-    background-color: var(--color-bg);
+    background-color: var(--background);
     padding: 0.5rem;
 }
 
