--- a/src/app/header/header.component.css
+++ b/src/app/header/header.component.css
@@ -4,12 +4,12 @@
     width: 100%;
     padding: 2rem;
     border: 1px solid var(--borders);
-    background-color: var(--color-sec-bg);
+    background-color: var(--sec-background);
 }
 
 h1 {
     font-size: 2.4rem;
-    color: var(--color-text);
+    color: var(--text);
 }
 
 .btn_primary {
