--- a/src/app/sidebar/sidebar.component.html
+++ b/src/app/sidebar/sidebar.component.html
@@ -1,7 +1,10 @@
 <div class="sidebar" [class.hide]="!isSidebarShown">
     <div class="sidebar_top">
-        <div class="logo"> <img src="assets/images/logo-light.svg" alt="main logo" srcset=""></div>
-
+        <div class="logo" *ngIf="isLightThemeActive; else elseBlock"> <img src="assets/images/logo-dark.svg"
+                alt="main logo" srcset=""></div>
+        <ng-template #elseBlock>
+            <div class="logo"> <img src="assets/images/logo-light.svg" alt="main logo" srcset=""></div>
+        </ng-template>
         <div class="sidebar_board">
             <div class="sidebar_list">
                 <h2>All boards({{ boards?.length }})</h2>
@@ -17,21 +20,18 @@
                 </ul>
             </div>
         </div>
-
     </div>
-
 
     <div class="sidebar_bottom">
         <div class="sidebar__toggle">
-            <!-- TO DO IN FUTURE -->
-            <!-- <div class="sidebar__toggle--theme">
-                <img src="assets/icons/icon-light-theme.svg" alt="light theme" srcset="">
-                <label class="switch" for="checkbox">
-                    <input type="checkbox" id="checkbox" aria-label="Switch theme" />
-                    <div class="slider round"></div>
-                </label>
+            <div class="sidebar__toggle--theme">
                 <img src="assets/icons/icon-dark-theme.svg" alt="dark theme" srcset="">
-            </div> -->
+                <label class="switch">
+                    <input type="checkbox" (change)="changeTheme()" [checked]="isLightThemeActive">
+                    <span class="slider round"></span>
+                </label>
+                <img src="assets/icons/icon-light-theme.svg" alt="light theme" srcset="">
+            </div>
             <div class="sidebar__toggle--show" (click)="hideSidebar()">
                 <img src="assets/icons/icon-hide-sidebar.svg" alt="toggle sidebar" srcset="">
                 <p>Hide sidebar</p>
